# dali-interface

./: README.md  pyproject.toml
.github/workflows/: release.yaml
src/dali_interface/: __init__.py  dali_interface.py  hid.py  mock.py  serial.py
